# pfa_nav

./: .gitignore  README.md  auto_nav.py  build.sh  cmd_to_gimbal.py  cmd_vel_to_gimbal.py  game.py  game_sim.py  goal_pose_publisher.py  hero_lidar.pgm  hero_lidar.yaml  hp_gimbal_nav.py  hp_nav.py  mock_gimbal.py  nav.py  nav.sh  save.sh  send.py  test.pgm  test.yaml  true_pram.yaml  waypoints.yaml
docs/superpowers/specs/: 2026-04-26-nav2-isolated-noise-filter-design.md
pb2025_robot_description/launch/: robot_description_launch.py
pb2025_robot_description/resource/xmacro/: pfa_sentry_robot.sdf.xmacro  pfa_zheng_robot.sdf.xmacro
pb2025_sentry_nav.wiki/: Home.md  _Footer.md  实车调参指南.md  实车部署指南.md  建图指南.md
scripts/: README.md  cleanup_ros2_env.sh  diagnose_slam_scan_gates.py  diagnose_viz_cpu.py  diagnose_x11_clients.py
src/hero_lidar/: package.xml  setup.cfg  setup.py
src/hero_lidar/hero_lidar/: hero_lidar_node.py
src/hero_lidar/launch/: hero_lidar_launch.py
src/pb2025_robot_description/resource/xmacro/: pfa_sentry_robot.sdf.xmacro
src/pb2025_sentry_nav/: README.md
src/pb2025_sentry_nav/fake_vel_transform/src/: fake_vel_transform.cpp
src/pb2025_sentry_nav/loam_interface/src/: loam_interface.cpp
src/pb2025_sentry_nav/loop_closure_3d/: CMakeLists.txt  README.md  package.xml
src/pb2025_sentry_nav/loop_closure_3d/config/: loop_closure_params.yaml
src/pb2025_sentry_nav/loop_closure_3d/include/loop_closure_3d/: loop_closure_node.hpp
src/pb2025_sentry_nav/loop_closure_3d/launch/: loop_closure_launch.py
src/pb2025_sentry_nav/loop_closure_3d/src/: loop_closure_node.cpp
src/pb2025_sentry_nav/pb2025_nav_bringup/launch/: bringup_launch.py  (+6 more)
src/pb2025_sentry_nav/small_gicp_relocalization/: CMakeLists.txt  package.xml
src/small_gicp/log/: latest_build
src/wp_map_tools/launch/: add_waypoint_reality.launch.py  add_waypoint_simulation.launch.py
src/wp_map_tools/rviz/: edit.rviz
src/wp_map_tools/src/: wp_saver.cpp
(+29 files in other folders)
